<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto">

<data>
    <import type="android.view.View"/>

    <variable name="projectDetailViewModel" type="com.example.mvvmkotlin.projectDetail.viewModel.ProjectDetailViewModel"/>
</data>

<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background">

    <ProgressBar
            android:id="@+id/loading_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading_project"
            android:textAlignment="center"
            app:isVisible="@{projectDetailViewModel.dataLoading}"/>

    <LinearLayout
            android:layout_marginStart="@dimen/item_horizontal_margin"
            android:layout_marginEnd="@dimen/item_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            app:isVisible="@{!projectDetailViewModel.dataLoading}">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/logo_width"
                android:layout_height="@dimen/logo_height"
                app:srcCompat="@drawable/github" />

        <com.example.mvvmkotlin.core.widget.SequrTextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/project_name"
                android:textStyle="bold"
                android:textSize="@dimen/project_header1"
                android:text="@{projectDetailViewModel.projectDetail.name}"
                android:textAlignment="center"
                android:paddingBottom="5dp"/>

        <com.example.mvvmkotlin.core.widget.SequrTextView
                android:id="@+id/project_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/project_description"
                android:textSize="@dimen/project_header2"
                android:text="@{projectDetailViewModel.projectDetail.description}"/>


        <com.example.mvvmkotlin.core.widget.SequrTextView
                android:id="@+id/languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/project_language"
                android:textSize="@dimen/project_text"
                android:text="@{String.format(@string/languages, projectDetailViewModel.projectDetail.language)}"/>

        <com.example.mvvmkotlin.core.widget.SequrTextView
                android:id="@+id/project_watchers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/project_watchers"
                android:textSize="@dimen/project_text"
                android:text="@{String.format(@string/watchers, projectDetailViewModel.projectDetail.watchers)}"/>

        <com.example.mvvmkotlin.core.widget.SequrTextView
                android:id="@+id/project_open_issues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/open_issues"
                android:textSize="@dimen/project_text"
                android:text="@{String.format(@string/openIssues, projectDetailViewModel.projectDetail.open_issues)}"/>


        <com.example.mvvmkotlin.core.widget.SequrTextView
                android:id="@+id/project_created_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Created At"
                android:textSize="@dimen/project_text"
                android:text="@{String.format(@string/created_at, projectDetailViewModel.projectDetail.created_at)}"/>

        <com.example.mvvmkotlin.core.widget.SequrTextView
                android:id="@+id/project_updated_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="Updated At"
                android:textSize="@dimen/project_text"
                android:text="@{String.format(@string/updated_at, projectDetailViewModel.projectDetail.updated_at)}"/>

        <com.example.mvvmkotlin.core.widget.SequrTextView
                android:id="@+id/clone_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/open_issues"
                android:textSize="@dimen/project_text"
                android:text="@{String.format(@string/clone_url, projectDetailViewModel.projectDetail.clone_url)}"/>

    </LinearLayout>

</FrameLayout>
</layout>