<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable name="projectListViewModel" type="com.example.mvvmkotlin.projectListView.viewModel.ProjectListViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:orientation="vertical">

        <com.example.mvvmkotlin.core.widget.SequrTextView
                android:id="@+id/loading_projects"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/loading_projects"
                android:textAlignment="center"
                app:isVisible="@{projectListViewModel.dataLoading}"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_light_background"
                android:orientation="vertical"
                app:isVisible="@{!projectListViewModel.dataLoading}">

            <com.example.mvvmkotlin.core.widget.SequrTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textSize="@dimen/project_header1"
                    android:text="@string/google_github_projects"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:textAlignment="center"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/project_list"
                    android:contentDescription="@string/projects_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:items="@{projectListViewModel.projectList}"
                    app:layoutManager="LinearLayoutManager"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>